application/web/test/src/main/java/com/tekgs/nextgen/igloo/view/invalidurl/InvalidUrlViewCalibratable.java
package com.tekgs.nextgen.igloo.view.invalidurl;

public interface InvalidUrlViewCalibratable {
    String getInvalidUrlMessage();
}
